--- a/pages/bid-page2.html
+++ b/pages/bid-page2.html
@@ -56,15 +56,14 @@
         </nav>
     </header>
     <div class="container">
-         <div class="images_display"> <!-- The several images -->
+        <div class="images_display"> <!-- The several images -->
             <div class="slider">
                 <img src="/img/auction-pictures/Lexus1.webp" alt="lexus" class="lexus">
+                <div class="chev">
+                    <button id="change"><i class="fa-solid fa-chevron-left" onclick="prev2()"></i></button>
+                    <button id="change"><i class="fa-solid fa-chevron-right" onclick="next2()"></i></button>
+                </div>
             </div>
-            <!-- <button class="btn" onclick="prev()">Prev</button>
-            <button class="btn" onclick="next()">Next</button> -->
-
-            <i class="fa-solid fa-arrow-left fa-2xl" onclick="prev2()"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <i class="fa-solid fa-arrow-right fa-2xl" onclick="next2()"></i>
         </div>
 
         <div class="bid_details">   <!-- Details of bidded item and bid placement -->
