--- a/pages/bid-page2.html
+++ b/pages/bid-page2.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="/css/bid-page.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/auction.css">
-    
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
@@ -86,7 +87,7 @@
                 </div>
             </div>
             <div class="new">
-                <h2>Time left for bid: <span class="timercolor" id="timer2"></span></h2>
+                <h2>Time left for bid: <br> <span class="timercolor" id="timer2"></span></h2>
             </div>
 
             <div class="description">
@@ -101,10 +102,6 @@
                 
                 <p class="update"><i class="fa-solid fa-circle-exclamation" style="color: #202122;"></i>
                     NOTE: Delivery logistics and cost is to be arranged by bidder</p>                                                                                                                                                                               
-                <!-- <h3>Buy it Now<h3> -->
-                    <!-- <a class = 'link_update' href="/"></a> -->
-                <!-- <p>N4,000,000</p> -->
-                <!-- <button class="btn1" id="click">Buy it Now</button> <button class ="btn2" id="click">Favorite</button> -->
             </div>
             <!-- <div class ="payment_details">
                 <h3 class="purchase">Shipping: N40,000</h3>
@@ -175,7 +172,7 @@
                     <li><a href="#">Accessibility</a></li>
                     <li><a href="#">Cookies policy</a></li>
                 </ul> -->
-                <p style="text-align: center;">© 2023 Vanilla FrontEnd developement Group for Sterling Bank. All rights reserved.</p>
+                <p style="text-align: center">© 2023 Vanilla FrontEnd developement Group for Sterling Bank. All rights reserved.</p>
             </div>
             <br>
             <hr>
