--- a/pages/bid-page4.html
+++ b/pages/bid-page4.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="/css/bid-page.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/auction.css">
-    
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
