--- a/pages/auction-page-furnitures.html
+++ b/pages/auction-page-furnitures.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="/css/auction.css">
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/css/footer.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <header class="header">
     <!-- <a href="#" class="logo">Logo</a> -->
     <a href="/pages/auction-page-all-items.html">
-        <img src="/img/Sterling Logo.svg" class="logo"> 
+        <img src="/img/SterlingLogo.svg" class="logo"> 
     </a>
     
 
@@ -37,8 +39,8 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="/pages/faq.html" class="active">FAQs</a></li>
-            <li><a href="#">Categories +</a>
+            <li><a href="/pages/faq.html">FAQs</a></li>
+            <li><a href="#" class="active">Categories +</a>
                 <ul>
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
                     <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
@@ -63,10 +65,10 @@
               <h2>Items Available in Ademola Adetokumbo Branch </h2>
             </div>
             <div class="img-group">
-                <img src="/img/auction-pictures/home-theater2.png" alt="#">
-                <img src="/img/auction-pictures/lounge-chair.png" alt="#">
-              <img src="/img/auction-pictures/sofa-chair.png" alt="#">
-              <img src="/img/auction-pictures/ward-robe.png" alt="#">
+              <a href="/pages/bid-page3.html"><img src="/img/auction-pictures/home-theater2.png" alt="homeitems" class="homeitems"></a>
+              <a href="/pages/bid-page3.html"><img src="/img/auction-pictures/lounge-chair.png" alt="homeitems" class="homeitems"></a>
+              <a href="/pages/bid-page3.html"><img src="/img/auction-pictures/sofa-chair.png" alt="homeitems" class="homeitems"></a>
+              <a href="/pages/bid-page3.html"><img src="/img/auction-pictures/ward-robe.png" alt="homeitems" class="homeitems"></a>
             </div> 
           </div> 
           <div class="item-description">
@@ -83,10 +85,10 @@
               <h2>Items available in Adeola Odekun Branch </h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/tv-console.png" alt="#">
-              <img src="/img/auction-pictures/Luxury-dining.png" alt="#">
-              <img src="/img/auction-pictures/lounge-chair.png" alt="#">
-              <img src="/img/auction-pictures/sofa-chair(2).png" alt="#">
+              <a href="/pages/bid-page4.html"><img src="/img/auction-pictures/tv-console.png" alt="homeitems2" class="homeitems2"></a>
+                <a href="/pages/bid-page4.html"><img src="/img/auction-pictures/Luxury-dining.png" alt="homeitems2" class="homeitems2"></a>
+                <a href="/pages/bid-page4.html"><img src="/img/auction-pictures/lounge-chair.png" alt="homeitems2" class="homeitems2"></a>
+                <a href="/pages/bid-page4.html"><img src="/img/auction-pictures/sofa-chair(2).png" alt="homeitems2" class="homeitems2"></a>
             </div> 
           </div> 
           <div class="item-description">
@@ -103,10 +105,10 @@
               <h2>Items in Akpakpava Branch </h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/wardrobe(2).png" alt="#">
-              <img src="/img/auction-pictures/wardrobe.png" alt="#">
-              <img src="/img/auction-pictures/Luxury-dining.png" alt="#">
-              <img src="/img/auction-pictures/luxury-sit.png" alt="#">
+              <a href="/pages/bid-page5.html"><img src="/img/auction-pictures/wardrobe(2).png" alt="homeitems3" class="homeitems3"></a>
+              <a href="/pages/bid-page5.html"><img src="/img/auction-pictures/wardrobe.png" alt="homeitems3" class="homeitems3"></a>
+              <a href="/pages/bid-page5.html"><img src="/img/auction-pictures/Luxury-dining.png" alt="homeitems3" class="homeitems3"></a>
+              <a href="/pages/bid-page5.html"><img src="/img/auction-pictures/luxury-sit.png" alt="homeitems3" class="homeitems3"></a>
             </div> 
           </div> 
           <div class="item-description">
