--- a/pages/auction-page-vehicles.html
+++ b/pages/auction-page-vehicles.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="/css/auction.css">
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/css/footer.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <header class="header">
     <!-- <a href="#" class="logo">Logo</a> -->
     <a href="/pages/auction-page-all-items.html">
-        <img src="/img/Sterling Logo.svg" class="logo"> 
+        <img src="/img/SterlingLogo.svg" class="logo"> 
     </a>
     
 
@@ -37,8 +39,8 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="/pages/faq.html" class="active">FAQs</a></li>
-            <li><a href="#">Categories +</a>
+            <li><a href="/pages/faq.html">FAQs</a></li>
+            <li><a href="#" class="active">Categories +</a>
                 <ul>
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
                     <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
@@ -60,17 +62,17 @@
         <div class="card">
           <div class="img-card">
             <div class="item-detils">
-              <h2>Lexus S6 ₦3,250,000 Head Office Branch </h2>
+              <h2>Lexus ES350 ₦3,250,000 Head Office Branch </h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/Lexus1.webp" alt="#">
-              <img src="/img/auction-pictures/Lexus4.webp" alt="#">
-              <img src="/img/auction-pictures/Lexus5.webp" alt="#">
-              <img src="/img/auction-pictures/Lexus3.webp" alt="#">
+              <a href="/pages/bid-page2.html"><img src="/img/auction-pictures/Lexus1.webp" alt="lexus" class="lexus"></a>
+              <a href="/pages/bid-page2.html"><img src="/img/auction-pictures/Lexus4.webp" alt="lexus" class="lexus"></a>
+              <a href="/pages/bid-page2.html"><img src="/img/auction-pictures/Lexus5.webp" alt="lexus" class="lexus"></a>
+              <a href="/pages/bid-page2.html"><img src="/img/auction-pictures/Lexus3.webp" alt="lexus" class="lexus"></a>
             </div> 
           </div> 
           <div class="item-description">
-            <p>Toyota Camry - 2012</p>
+            <p>Lexus ES350 - 2008</p>
             <p>Head Office Branch</p>
             <h2>Condition: Working </h2>
           </div>
@@ -83,10 +85,10 @@
               <h2>Benz S series ₦5,250,000 Head Office Branch</h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/Benz1.webp" alt="#">
-              <img src="/img/auction-pictures/Benz2.webp" alt="#">
-              <img src="/img/auction-pictures/Benz3.webp" alt="#">
-              <img src="/img/auction-pictures/Benz4.webp" alt="#">
+              <a href="/pages/bid-page.html"><img src="/img/auction-pictures/Benz1.jpg" alt="mercedes_benz" class="mbenz"></a>
+              <a href="/pages/bid-page.html"><img src="/img/auction-pictures/Benz2.jpg" alt="mercedes_benz"></a>
+              <a href="/pages/bid-page.html"><img src="/img/auction-pictures/Benz3.jpg" alt="mercedes_benz"></a>
+              <a href="/pages/bid-page.html"><img src="/img/auction-pictures/Benz4.jpg" alt="mercedes_benz"></a>
             </div> 
           </div> 
           <div class="item-description">
@@ -95,6 +97,26 @@
             <h2>Condition: Working </h2>
           </div>
           <button class="bid-item">RESERVE PRICE:<span class="price">₦5,250,000</span></button>  
+        </div>
+
+        <div class="card">
+          <div class="img-card">
+            <div class="item-detils">
+              <h2>2018 Mercedes GLA 250(FOREIGN USED) ₦19,000,000 Head Office Branch</h2>
+            </div>
+            <div class="img-group slider">
+              <a href="/pages/bid-page10.html"><img class="mbenz2" src="/img/auction-pictures/gla1.png" alt="Benz_GLA"></a>
+              <a href="/pages/bid-page10.html"><img class="mbenz2" src="/img/auction-pictures/gla2.png" alt="Benz_GLA"></a>
+              <a href="/pages/bid-page10.html"><img class="mbenz2" src="/img/auction-pictures/gla3.png" alt="Benz_GLA"></a>
+              <a href="/pages/bid-page10.html"><img class="mbenz2" src="/img/auction-pictures/gla4.png" alt="Benz_GLA"></a>
+            </div> 
+          </div> 
+          <div class="item-description">
+            <p>Benz GLA Series - 2018</p>
+            <p>Head Office Branch</p>
+            <h2>Condition: Working and Foreign Used </h2>
+          </div>
+          <button class="bid-item">RESERVE PRICE:<span class="price" id="num">₦19,000,000</span></button>  
         </div>
 
         <!-- <div class="card">
