--- a/pages/auctions-page-electronics.html
+++ b/pages/auctions-page-electronics.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="/css/auction.css">
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/css/footer.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <header class="header">
     <!-- <a href="#" class="logo">Logo</a> -->
     <a href="/pages/auction-page-all-items.html">
-        <img src="/img/Sterling Logo.svg" class="logo"> 
+        <img src="/img/SterlingLogo.svg" class="logo"> 
     </a>
     
 
@@ -37,8 +39,8 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="/pages/faq.html" class="active">FAQs</a></li>
-            <li><a href="#">Categories +</a>
+            <li><a href="/pages/faq.html">FAQs</a></li>
+            <li><a href="#" class="active">Categories +</a>
                 <ul>
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
                     <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
@@ -63,10 +65,10 @@
               <h2>Hisense Air Condition Adeola Odekun Branch </h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/hisense-ac(2).png" alt="#">
-              <img src="/img/auction-pictures/Hisense-ac.png" alt="#">
-              <img src="/img/auction-pictures/hisense-ac.jfif" alt="#">
-              <img src="/img/auction-pictures/hisense-both-ac.jpg" alt="#">
+              <a href="/pages/bid-page6.html"><img src="/img/auction-pictures/hisense-ac.jfif" alt="electronics" class="electronics"></a>
+              <a href="/pages/bid-page6.html"><img src="/img/auction-pictures/Hisense-ac.png" alt="electronics" class="electronics"></a>
+              <a href="/pages/bid-page6.html"><img src="/img/auction-pictures/hisense-ac.jfif" alt="electronics" class="electronics"></a>
+              <a href="/pages/bid-page6.html"><img src="/img/auction-pictures/hisense-both-ac.jpg" alt="electronics" class="electronics"></a>
             </div> 
           </div> 
           <div class="item-description">
@@ -83,10 +85,10 @@
               <h2>Divoom Home Thearter ₦25,000 Akpakpava Branch</h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/home-thearter1.png" alt="#">
-              <img src="/img/auction-pictures/home-theater.png" alt="#">
-              <img src="/img/auction-pictures/home-theater2.png" alt="#">
-              <img src="/img/auction-pictures/home-theater.png" alt="#">
+              <a href="/pages/bid-page7.html"><img src="/img/auction-pictures/home-thearter1.png" alt="electronics2" class="electronics2"></a>
+              <a href="/pages/bid-page7.html"><img src="/img/auction-pictures/home-theater.png" alt="electronics2" class="electronics2"></a>
+              <a href="/pages/bid-page7.html"><img src="/img/auction-pictures/home-theater2.png" alt="electronics2" class="electronics2"></a>
+              <a href="/pages/bid-page7.html"><img src="/img/auction-pictures/home-theater.png" alt="electronics2" class="electronics2"></a>
             </div> 
           </div> 
           <div class="item-description">
@@ -103,10 +105,10 @@
               <h2>Portable Laptop Power Bank ₦50,000 Head Office Branch </h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/laptop-power-bank.png" alt="#">
-              <img src="/img/auction-pictures/laptop-power-b.png" alt="#">
-              <img src="/img/auction-pictures/portable-laptop-powerbank.png" alt="#">
-              <img src="/img/auction-pictures/laptop-power-bank.png" alt="#">
+              <a href="/pages/bid-page8.html"><img src="/img/auction-pictures/laptop-power-bank.png" alt="power-bank" class="electronics3"></a>
+              <a href="/pages/bid-page8.html"><img src="/img/auction-pictures/laptop-power-b.png" alt="power-bank" class="electronics3"></a>
+              <a href="/pages/bid-page8.html"><img src="/img/auction-pictures/portable-laptop-powerbank.png" alt="power-bank" class="electronics3"></a>
+              <a href="/pages/bid-page8.html"><img src="/img/auction-pictures/laptop-power-bank.png" alt="power-bank" class="electronics3"></a>
             </div> 
           </div> 
           <div class="item-description">
@@ -123,10 +125,10 @@
               <h2>Sound Mikano Sound Proof Generator - ₦750,000 Oron Road Branch </h2>
             </div>
             <div class="img-group">
-              <img src="/img/auction-pictures/mikano-generator.png" alt="#">
-              <img src="/img/auction-pictures/Mikano-features-and-prices-in-Nigeria.jpeg" alt="#">
-              <img src="/img/auction-pictures/mikano-gen.jpg" alt="#">
-              <img src="/img/auction-pictures/mikano-perkins-30kva-generator.jpg" alt="#">
+              <a href="/pages/bid-page9.html"><img src="/img/auction-pictures/mikano-generator.png" alt="Mikano_Generator" class="electronics4"></a>
+              <a href="/pages/bid-page9.html"><img src="/img/auction-pictures/Mikano-features-and-prices-in-Nigeria.jpeg" alt="Mikano_Generator" class="electronics4"></a>
+              <a href="/pages/bid-page9.html"><img src="/img/auction-pictures/mikano-gen.jpg" alt="Mikano_Generator" class="electronics4"></a>
+              <a href="/pages/bid-page9.html"><img src="/img/auction-pictures/mikano-perkins-30kva-generator.jpg" alt="Mikano_Generator" class="electronics4"></a>
             </div> 
           </div> 
           <div class="item-description">
