--- a/pages/review.html
+++ b/pages/review.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, intial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Testimonial HTML</title>
 <!--style----->
 <style>
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="../css/footer.css"/>
 <link rel="stylesheet" href="../css/review.css"/>
 <!--Fav-icon------------------------------>
-<link rel="shortcut icon" href="images/fav-icon.png"/>
+<link rel="shortcut icon" href="/images/fav-icon.png"/>
 <!--poppins-font-family------------------->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -53,10 +53,10 @@
                 <li><a href="./faq.html">FAQs</a></li>
                 <li><a href="#">Categories +</a>
                     <ul>
-                        <li><a href="#">All</a></li>
-                        <li><a href="#">Cars</a></li>
-                        <li><a href="#">Furnitures</a></li>
-                        <li><a href="#">Electronics</a></li>
+                        <li><a href="/pages/auction-page-all-items.html">All</a></li>
+                        <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
+                        <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
+                        <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Contact</a></li>
@@ -301,10 +301,10 @@
             <hr>
             <br>
             <div class="bottom">
-                <ul>
+                <!-- <ul>
                     <li><a href="#">Accessibility</a></li>
                     <li><a href="#">Cookies policy</a></li>
-                </ul>
+                </ul> -->
                 <p>© 2023 Vanilla FrontEnd developement Group for Sterling Bank. All rights reserved.</p>
             </div>
             <br>
