Another set of amendments

--- a/pages/review.html
+++ b/pages/review.html
@@ -11,9 +11,9 @@
     }
 </style>
 <link rel="stylesheet" href="/style.css"/>
-<link rel="stylesheet" href="../css/faq.css"/>
-<link rel="stylesheet" href="../css/footer.css"/>
-<link rel="stylesheet" href="../css/review.css"/>
+<link rel="stylesheet" href="/css/faq.css"/>
+<link rel="stylesheet" href="/css/footer.css"/>
+<link rel="stylesheet" href="/css/review.css"/>
 <!--Fav-icon------------------------------>
 <link rel="shortcut icon" href="/images/fav-icon.png"/>
 <!--poppins-font-family------------------->
@@ -178,7 +178,7 @@
                             <img src="/img/4-John.png" />
                         </div>
                         <div class="name-user">
-                            <strong>John Dada</strong>
+                            <strong>John the beloved Dada</strong>
                             <span>Ilorin Branch</span>
                         </div>
                     </div>
