--- a/pages/auction-page-all-items.html
+++ b/pages/auction-page-all-items.html
@@ -43,7 +43,7 @@
             <li><a href="#" class="active">Categories +</a>
                 <ul>
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
-                    <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
+                    <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
                     <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
                     <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                 </ul>
