--- a/pages/bid-page2.html
+++ b/pages/bid-page2.html
@@ -43,11 +43,11 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="/pages/faq.html" class="active">FAQs</a></li>
-                <li><a href="#">Categories +</a>
+                <li><a href="/pages/faq.html">FAQs</a></li>
+                <li><a href="#" class="active">Categories +</a>
                     <ul>
                         <li><a href="/pages/auction-page-all-items.html">All</a></li>
-                        <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
+                        <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
                         <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
                         <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                     </ul>
@@ -56,7 +56,7 @@
             </ul> 
         </nav>
     </header>
-    <div class="container">
+    <div class="containment">
         <div class="images_display"> <!-- The several images -->
             <div class="slider">
                 <img src="/img/auction-pictures/Lexus1.webp" alt="lexus" class="lexus">
@@ -70,7 +70,7 @@
         <div class="bid_details">   <!-- Details of bidded item and bid placement -->
             <div class="details">
                 <h2>Item type</h2>
-                <h3>Cars</h3>
+                <h3>Vehicle</h3>
             </div>
             <div class="details2">    <!-- Details of bidded item and bid placement -->
                 <div class="another_details">
@@ -91,7 +91,7 @@
             </div>
 
             <div class="description">
-                <h4>Current Bid<span class ='testing' style="font-size: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*Reserve has not been met</span></h4>
+                <h4>Current Bid</h4>
                 <h2 class = "rprice">₦3,300,000</h2>
                 
                 <!-- <p style="text-decoration: underline;">3 bids</p> -->
