--- a/pages/bid-page5.html
+++ b/pages/bid-page5.html
@@ -44,11 +44,11 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="./pages/faq.html" class="active">FAQs</a></li>
-                <li><a href="#">Categories +</a>
+                <li><a href="./pages/faq.html">FAQs</a></li>
+                <li><a href="#" class="active">Categories +</a>
                     <ul>
                         <li><a href="/pages/auction-page-all-items.html">All</a></li>
-                        <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
+                        <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
                         <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
                         <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                     </ul>
@@ -57,7 +57,7 @@
             </ul> 
         </nav>
     </header>
-    <div class="container">
+    <div class="containment">
         <div class="images_display"> <!-- The several images -->
             <div class="slider">
                 <img src="/img/auction-pictures/wardrobe(2).png" alt="homeitems3" class="homeitems3">
@@ -92,7 +92,7 @@
             </div>
 
             <div class="description">
-                <h4>Current Bid<span class ='testing' style="font-size: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*Reserve has not been met</span></h4>
+                <h4>Current Bid</h4>
                 <h2 class="rprice">₦750,000</h2>
                 
                 <p id = "bid_count"></p>
