--- a/pages/bid-page9.html
+++ b/pages/bid-page9.html
@@ -6,7 +6,7 @@
     <title>Sterling Bank Auction Page</title>
     <link rel="icon" href="/asset/img/" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="/css/bid-page.css">
     <link rel="stylesheet" href="/css/footer.css">
@@ -44,11 +44,11 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="./pages/faq.html" class="active">FAQs</a></li>
-                <li><a href="#">Categories +</a>
+                <li><a href="./pages/faq.html">FAQs</a></li>
+                <li><a href="#" class="active">Categories +</a>
                     <ul>
                         <li><a href="/pages/auction-page-all-items.html">All</a></li>
-                        <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
+                        <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
                         <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
                         <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                     </ul>
@@ -57,7 +57,7 @@
             </ul> 
         </nav>
     </header>
-    <div class="container">
+    <div class="containment">
         <div class="images_display"> <!-- The several images -->
             <div class="slider">
                 <img src="/img/auction-pictures/mikano-generator.png" alt="Mikano_Generator" class="electronics4">
@@ -92,7 +92,7 @@
             </div>
 
             <div class="description">
-                <h4>Current Bid<span class ='testing' style="font-size: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*Reserve has not been met</span></h4>
+                <h4>Current Bid</h4>
                 <h2 class="rprice">₦750,000</h2>
                 
                 <p id = "bid_count"></p>
