--- a/pages/faq.html
+++ b/pages/faq.html
@@ -42,10 +42,10 @@
                 <li><a href="#" class="active">FAQs</a></li>
                 <li><a href="#">Categories +</a>
                     <ul>
-                        <li><a href="#">All</a></li>
-                        <li><a href="#">Cars</a></li>
-                        <li><a href="#">Furnitures</a></li>
-                        <li><a href="#">Electronics</a></li>
+                        <li><a href="/pages/auction-page-all-items.html">All</a></li>
+                        <li><a href="/pages/auction-page-vehicles.html">Cars</a></li>
+                        <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
+                        <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Contact</a></li>
@@ -217,6 +217,6 @@
         </div>
     </footer>
 
-    <script src="../js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
