--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                     </div>
 
                     <h2>Sign In</h2>
+                    <br>
+                    <p id="errormsg"></p>
                 
                     <div class="input-box input-control">
                         <span class="icon"><i class='bx bxs-user' ></i></span>
