--- a/pages/faq.html
+++ b/pages/faq.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="../css/faq.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="/css/faq.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <header class="header">
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <!-- Question 3 -->
+        <!-- Question 3
         <div class="faq">  
             <div class="question">
                 <h3>Can I place bids for more than one item ?</h3>
@@ -101,7 +101,7 @@
                     N.B. Please note you are not allowed to place multiple bids for a single item. Placing multiple bids for the same item disqualifies you from getting your bids accepted even if one of your bids is the highest for that item.
                 </p>
             </div>
-        </div>
+        </div> -->
 
         <!-- Question 4 -->
         <div class="faq">  
@@ -121,7 +121,7 @@
         <!-- Question 5 -->
         <div class="faq">  
             <div class="question">
-                <h3>How do I make payment if my bid is accepted ?</h3>
+                <h3>How do I make payment if my bid is accepted?</h3>
                 <svg width="15" height="10" viewBox="0 0 42 25">
                     <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
                 </svg>
