addition of auction status and other amendments

--- a/pages/auctions-page-electronics.html
+++ b/pages/auctions-page-electronics.html
@@ -32,7 +32,7 @@
                     <li><a href="#">Blogs</a></li>
                     <li><a href="#">Services +</a>
                         <ul>
-                            <li><a href="#">Auction Status</a></li>
+                            <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
                             <li><a href="/pages/review.html">Review</a></li>
                             <li><a href="#">Inspection</a></li>
                         </ul> 
@@ -45,7 +45,7 @@
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
                     <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
                     <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
-                    <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
+                    <li><a href="/pages/auctions-page-electronics.html" class="active">Electronics</a></li>
                 </ul>
             </li>
             <li><a href="#">Contact</a></li>
@@ -62,7 +62,7 @@
         <div class="card">
           <div class="img-card">
             <div class="item-detils">
-              <h2>Hisense Air Condition Adeola Odekun Branch </h2>
+              <h2>Hisense Air Condition Adeola Odekun Branch</h2>
             </div>
             <div class="img-group">
               <a href="/pages/bid-page6.html"><img src="/img/auction-pictures/hisense-ac.jfif" alt="electronics" class="electronics"></a>
@@ -82,7 +82,7 @@
         <div class="card">
           <div class="img-card">
             <div class="item-detils">
-              <h2>Divoom Home Thearter ₦25,000 Akpakpava Branch</h2>
+              <h2>Divoom Home Theatre ₦25,000 Akpakpava Branch</h2>
             </div>
             <div class="img-group">
               <a href="/pages/bid-page7.html"><img src="/img/auction-pictures/home-thearter1.png" alt="electronics2" class="electronics2"></a>
@@ -92,8 +92,8 @@
             </div> 
           </div> 
           <div class="item-description">
-            <p>LG 780Watts Home Thearter</p>
-            <p>Thearter Akpakpava Branch</p>
+            <p>LG 780Watts Home Theatre</p>
+            <p>Akpakpava Branch</p>
             <h2>Condition: Working </h2>
           </div>
           <button class="bid-item">RESERVE PRICE:<span class="price">₦25,000</span></button>  
