--- a/pages/bid-page3.html
+++ b/pages/bid-page3.html
@@ -39,7 +39,7 @@
                         <li><a href="#">Blogs</a></li>
                         <li><a href="#">Services +</a>
                             <ul>
-                                <li><a href="#">Auction Status</a></li>
+                                <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
                                 <li><a href="/pages/review.html">Review</a></li>
                                 <li><a href="#">Inspection</a></li>
                             </ul> 
@@ -178,7 +178,7 @@
                     <li><a href="#">Accessibility</a></li>
                     <li><a href="#">Cookies policy</a></li>
                 </ul> -->
-                <p style="text-align: center;">© 2023 Vanilla FrontEnd developement Group for Sterling Bank. All rights reserved.</p>
+                <p style="text-align: center">© 2023 Vanilla FrontEnd developement Group for Sterling Bank. All rights reserved.</p>
             </div>
             <br>
             <hr>
