--- a/pages/faq.html
+++ b/pages/faq.html
@@ -32,7 +32,7 @@
                         <li><a href="#">Blogs</a></li>
                         <li><a href="#">Services +</a>
                             <ul>
-                                <li><a href="#">Auction Status</a></li>
+                                <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
                                 <li><a href="/pages/review.html">Review</a></li>
                                 <li><a href="#">Inspection</a></li>
                             </ul> 
@@ -67,7 +67,8 @@
             <div class="answer">
                 <p>
                     After selecting the items you are interested in bidding for, you will input your bid in the field provided in the description of the item.
-                    N.B. You are not allowed to place bids below the starting bid of any item.
+                    N.B. You are not allowed to place bids below the starting bid of any item. <br>
+                    Click <a href="/pages/auction-page-all-items.html" style="color: cadetblue;">here</a> to place a bid from the items available for auction.
                 </p>
             </div>
         </div>
@@ -82,7 +83,8 @@
             </div>
             <div class="answer">
                 <p>
-                    Immediately your bid value has been inputted for an item, it moves to your cart indicating your bid has been placed. You will also receive email notification for bids successful bids placed any interested item.
+                    Immediately your bid value has been inputted for an item, it moves to your cart indicating your bid has been placed. You will also receive email notification for bids successful bids placed any interested item. <br>
+                    You can track the status of your bid(s) <a href="/pages/auctionstatus.html" style="color: cadetblue;">here</a>.
                 </p>
             </div>
         </div>
@@ -164,15 +166,8 @@
                         <li><a href="#">Terms & Conditions</a></li>
                     </ul>
                     <br>
-                    <hr>
+                    <!-- <hr> -->
                     <br>
-                    <h4>Follow Us</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
                 </div>
                 <div class="footer-col">
                     <h4>Get Help</h4>
@@ -206,10 +201,6 @@
             <hr>
             <br>
             <div class="bottom">
-                <!-- <ul>
-                    <li><a href="#">Accessibility</a></li>
-                    <li><a href="#">Cookies policy</a></li>
-                </ul> -->
                 <p>© 2023 Vanilla FrontEnd developement Group for Sterling Bank. All rights reserved.</p>
             </div>
             <br>
