--- a/pages/auction-page-furnitures.html
+++ b/pages/auction-page-furnitures.html
@@ -32,7 +32,7 @@
                     <li><a href="#">Blogs</a></li>
                     <li><a href="#">Services +</a>
                         <ul>
-                            <li><a href="#">Auction Status</a></li>
+                            <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
                             <li><a href="/pages/review.html">Review</a></li>
                             <li><a href="#">Inspection</a></li>
                         </ul> 
@@ -44,7 +44,7 @@
                 <ul>
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
                     <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
-                    <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
+                    <li><a href="/pages/auction-page-furnitures.html" class="active">Furnitures</a></li>
                     <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                 </ul>
             </li>
