--- a/pages/auction-page-vehicles.html
+++ b/pages/auction-page-vehicles.html
@@ -32,7 +32,7 @@
                     <li><a href="#">Blogs</a></li>
                     <li><a href="#">Services +</a>
                         <ul>
-                            <li><a href="#">Auction Status</a></li>
+                            <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
                             <li><a href="/pages/review.html">Review</a></li>
                             <li><a href="#">Inspection</a></li>
                         </ul> 
@@ -43,7 +43,7 @@
             <li><a href="#" class="active">Categories +</a>
                 <ul>
                     <li><a href="/pages/auction-page-all-items.html">All</a></li>
-                    <li><a href="/pages/auction-page-vehicles.html">Vehicles</a></li>
+                    <li><a href="/pages/auction-page-vehicles.html" class="active">Vehicles</a></li>
                     <li><a href="/pages/auction-page-furnitures.html">Furnitures</a></li>
                     <li><a href="/pages/auctions-page-electronics.html">Electronics</a></li>
                 </ul>
@@ -82,7 +82,7 @@
         <div class="card">
           <div class="img-card">
             <div class="item-detils">
-              <h2>Benz S series ₦5,250,000 Head Office Branch</h2>
+              <h2>Benz C series ₦5,250,000 Head Office Branch</h2>
             </div>
             <div class="img-group">
               <a href="/pages/bid-page.html"><img src="/img/auction-pictures/Benz1.jpg" alt="mercedes_benz" class="mbenz"></a>
@@ -92,7 +92,7 @@
             </div> 
           </div> 
           <div class="item-description">
-            <p>Benz S Series - 2012</p>
+            <p>Benz C Series - 2012</p>
             <p>Head Office Branch</p>
             <h2>Condition: Working </h2>
           </div>
