--- a/pages/bid-page4.html
+++ b/pages/bid-page4.html
@@ -36,7 +36,7 @@
                         <li><a href="#">Blogs</a></li>
                         <li><a href="#">Services +</a>
                             <ul>
-                                <li><a href="#">Auction Status</a></li>
+                                <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
                                 <li><a href="/pages/review.html">Review</a></li>
                                 <li><a href="#">Inspection</a></li>
                             </ul> 
