Another set of updates

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Pages +</a>
+                <!-- <li><a href="#">Pages +</a>
                     <ul>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Updates</a></li>
                         <li><a href="#">Services +</a>
                             <ul>
                                 <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
@@ -44,7 +44,7 @@
                             </ul> 
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <li><a href="./pages/faq.html">FAQs</a></li>
                 <li><a href="#">Contact</a></li>
             </ul> 
