--- a/pages/faq.html
+++ b/pages/faq.html
@@ -29,7 +29,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Pages +</a>
                     <ul>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Updates</a></li>
                         <li><a href="#">Services +</a>
                             <ul>
                                 <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
@@ -130,7 +130,7 @@
             </div>
             <div class="answer">
                 <p>
-                    Web development, also known as website development, refers to the tasks associated with creating, building, and maintaining websites and web applications that run online on a browser. It may, however, also include web design, web programming, and database management.
+                    Winning bidders will be availed account details where payments will be made into and advised accordingly.
                 </p>
             </div>
         </div>
@@ -145,7 +145,7 @@
             </div>
             <div class="answer">
                 <p>
-                    Web development, also known as website development, refers to the tasks associated with creating, building, and maintaining websites and web applications that run online on a browser. It may, however, also include web design, web programming, and database management.
+                    Delivery logistics and cost will be covered by the Buyer. Upon fulfilment of all bid and payment requirements, buyer will be responsible for delivery of their bidded item. 
                 </p>
             </div>
         </div>
