--- a/pages/auction-page-all-items.html
+++ b/pages/auction-page-all-items.html
@@ -29,7 +29,7 @@
             <li><a href="/pages/auction-page-all-items.html">Home</a></li>
             <li><a href="#">Pages +</a>
                 <ul>
-                    <li><a href="#">Blogs</a></li>
+                    <li><a href="#">Updates</a></li>
                     <li><a href="#">Services +</a>
                         <ul>
                             <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
