--- a/pages/auctionstatus.html
+++ b/pages/auctionstatus.html
@@ -39,7 +39,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Pages +</a>
                     <ul>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Updates</a></li>
                         <li><a href="#" class="active">Services +</a>
                             <ul>
                                 <li><a href="/pages/auctionstatus.html" class="active">Auction Status</a></li>
