--- a/pages/bid-page5.html
+++ b/pages/bid-page5.html
@@ -34,7 +34,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Pages +</a>
                     <ul>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Updates</a></li>
                         <li><a href="#">Services +</a>
                             <ul>
                                 <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
