--- a/pages/review.html
+++ b/pages/review.html
@@ -35,7 +35,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="#" class="active">Pages +</a>
                     <ul>
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Updates</a></li>
                         <li><a href="#" class="active">Services +</a>
                             <ul>
                                 <li><a href="/pages/auctionstatus.html">Auction Status</a></li>
@@ -317,7 +317,6 @@
             <br>
             <hr>
         </div>
-
     </footer>
 
     <script src="/js/review.js"></script>
