addition of logout, change of home address and update on Sterling Logo address

--- a/pages/auction-page-all-items.html
+++ b/pages/auction-page-all-items.html
@@ -13,8 +13,8 @@
 <body>
   <header class="header">
     <!-- <a href="#" class="logo">Logo</a> -->
-    <a href="/pages/auction-page-all-items.html">
-        <img src="/img/SterlingLogo.svg" class="logo"> 
+    <a href="#">
+        <img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"> 
     </a>
     
 
