--- a/pages/auctionstatus.html
+++ b/pages/auctionstatus.html
@@ -24,8 +24,8 @@
 
     <header class="header">
         <!-- <a href="#" class="logo">Logo</a> -->
-        <a href="../index.html">
-            <img src="../img/SterlingLogo.svg" class="logo"> 
+        <a href="#">
+            <img src="../img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"> 
         </a>
         
         <input type="checkbox" id="check">
@@ -36,7 +36,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/pages/auction-page-all-items.html">Home</a></li>
                 <li><a href="#">Pages +</a>
                     <ul>
                         <li><a href="#">Updates</a></li>
@@ -59,6 +59,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="/index.html">Logout</a></li>
             </ul> 
         </nav>
     </header>
