--- a/pages/faq.html
+++ b/pages/faq.html
@@ -13,8 +13,8 @@
 <body>
     <header class="header">
         <!-- <a href="#" class="logo">Logo</a> -->
-        <a href="../index.html">
-            <img src="/img/SterlingLogo.svg" class="logo"> 
+        <a href="#">
+            <img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"> 
         </a>
         
 
@@ -26,7 +26,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/pages/auction-page-all-items.html">Home</a></li>
                 <li><a href="#">Pages +</a>
                     <ul>
                         <li><a href="#">Updates</a></li>
@@ -49,6 +49,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="/index.html">Logout</a></li>
             </ul> 
         </nav>
     </header>
