--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <img src="/img/SterlingLogo.svg" class="logo"> 
+        <img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"> 
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -32,7 +32,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="#" class="active">Home</a></li>
+                <!-- <li><a href="#" class="active">Home</a></li> -->
                 <!-- <li><a href="#">Pages +</a>
                     <ul>
                         <li><a href="#">Updates</a></li>
