--- a/pages/auctions-page-electronics.html
+++ b/pages/auctions-page-electronics.html
@@ -13,8 +13,8 @@
 <body>
   <header class="header">
     <!-- <a href="#" class="logo">Logo</a> -->
-    <a href="/pages/auction-page-all-items.html">
-        <img src="/img/SterlingLogo.svg" class="logo"> 
+    <a href="#">
+        <img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"> 
     </a>
     
 
@@ -49,6 +49,7 @@
                 </ul>
             </li>
             <li><a href="#">Contact</a></li>
+            <li><a href="/index.html">Logout</a></li>
         </ul> 
     </nav>
 </header>
