--- a/pages/review.html
+++ b/pages/review.html
@@ -22,7 +22,7 @@
 <body>
 
     <header class="header">
-        <a href="/index.html"><img src="/img/SterlingLogo.svg" class="logo"></a>
+        <a href="#"><img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"></a>
         
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -32,7 +32,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/auction-page-all-items.html">Home</a></li>
                 <li><a href="#" class="active">Pages +</a>
                     <ul>
                         <li><a href="#">Updates</a></li>
@@ -55,6 +55,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="/index.html">Logout</a></li>
             </ul> 
         </nav>
     </header>
