--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <header class="header">
-        <img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo"> 
+        <img src="/img/SterlingLogo.svg" class="logo" alt="Sterling_Logo">
+
+
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -68,6 +70,7 @@
         </div>
         <div class="logreg-box">
             <div class="form-box login">
+                <img src="img/HUB.PNG" alt="hub_logo" class="Hub_logo">
                 <form id="submit" action="/">
 
                     <div class="content2">
@@ -105,7 +108,7 @@
                     <button class="btn">Sign in</button>
 
                     <div class="login-register">
-                        <p>Read terms & condition ! <a target="_blank" href="https://sterlingbankng-my.sharepoint.com/:w:/g/personal/mobolaji_ibine_sterling_ng/EYicbSGg63JCjxvtUxUDNSwB0SeXhPhMisTuG2h27O4LKA?e=T7DlUk" class="register-link">Here</a></p>
+                        <p>Read terms & condition ! <a target="_blank" href="https://sterlingbankng-my.sharepoint.com/:w:/g/personal/mobolaji_ibine_sterling_ng/Edj1kxfxEDhDvm52IhjOfMsBNmXEiK8laLM3tk1HUnYVPw?e=IIdPT7" class="register-link">Here</a></p>
                     </div>
                     <!-- <div class="login">
                         <form action="submit" id="form">
