Logo and FAQ pages

--- a/pages/bid-page3.html
+++ b/pages/bid-page3.html
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="./pages/faq.html">FAQs</a></li>
+                <li><a href="/pages/faq.html">FAQs</a></li>
                 <li><a href="#" class="active">Categories +</a>
                     <ul>
                         <li><a href="/pages/auction-page-all-items.html">All</a></li>
